--- a/machines.yaml
+++ b/machines.yaml
@@ -16,7 +16,7 @@ items:
           address: 10.0.0.25
           port: 22
         public:
-          address: 54.254.6.48
+          address: 18.141.144.142
           port: 22
 - apiVersion: cluster.k8s.io/v1alpha1
   kind: Machine
@@ -31,9 +31,9 @@ items:
         apiVersion: baremetalproviderspec/v1alpha1
         kind: BareMetalMachineProviderSpec
         private:
-          address: 10.0.0.26 
+          address: 
           port: 22
         public:
-          address: 18.141.164.205
+          address: 
           port: 22
 kind: List
