--- a/flux.yaml
+++ b/flux.yaml
@@ -110,11 +110,11 @@ items:
         containers:
         - args:
           - --ssh-keygen-dir=/var/fluxd/keygen
-          - --git-url=https://github.com/weaveworks/wks-quickstart-firekube.git
-          - --git-branch=fix-0-8-4
+          - --git-url=git@github.com:kanca-studio/kubernetes-production.git
+          - --git-branch=master
           - --git-poll-interval=30s
           - --git-path=.
-          - --git-readonly
+          - --git-readonly=false
           - --memcached-hostname=memcached.weavek8sops.svc.cluster.local
           - --memcached-service=memcached
           - --listen-metrics=:3031
