--- a/machines.yaml
+++ b/machines.yaml
@@ -1,4 +1,5 @@
 apiVersion: v1
+kind: List
 items:
 - apiVersion: cluster.k8s.io/v1alpha1
   kind: Machine
@@ -13,10 +14,10 @@ items:
         apiVersion: baremetalproviderspec/v1alpha1
         kind: BareMetalMachineProviderSpec
         private:
-          address: 
+          address: 10.0.0.25
           port: 22
         public:
-          address: 
+          address: 54.255.223.48
           port: 22
 - apiVersion: cluster.k8s.io/v1alpha1
   kind: Machine
@@ -31,9 +32,8 @@ items:
         apiVersion: baremetalproviderspec/v1alpha1
         kind: BareMetalMachineProviderSpec
         private:
-          address: 
+          address: 10.0.0.26 
           port: 22
         public:
-          address: 
+          address: 13.250.41.124
           port: 22
-kind: List
