--- a/cluster.yaml
+++ b/cluster.yaml
@@ -18,7 +18,7 @@ spec:
 apiVersion: cluster.weave.works/v1alpha3
 kind: ExistingInfraCluster
 metadata:
-  name: example-provider
+  name: example
 spec:
   user: root
   controlPlaneMachineCount: "1"
